langgraph implementation of chains

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,7 @@ dependencies = [
     "langchain>=1.1.0",
     "langchain-community>=0.4.1",
     "langchain-core>=1.1.0",
+    "langchain-openai>=1.1.0",
     "langgraph>=1.0.4",
+    "python-dotenv>=1.2.1",
 ]
